*Wed Jan 6 2010 Henri Gavin <henri.gavin@duke.edu> 0.20100105
- if dx == -1 then skip the calculation of internal forces and transverse
displacements.  
- update examples/*.3dd data files with new dx variable and re-run all examples
- update matlab interface matlab/frame_3dd.m
- update user-manual.html

*Tue Jan 5 2010 Henri Gavin <henri.gavin@duke.edu> 0.20100105
- fix error in equivalent load calculation for trapezoidally-distributed loads
acting along the local x-axis.
- add function "write_internal_forces" to frame3dd_io.c in order to compute
and save the internal axial force, shear forces, torsion, bending moments,
and transverse displacements for each frame element.
- add varialbe dx for user-specified x-axis increment for the internal force
calculations
- update examples/*.3dd data files with new dx variable and re-run all examples
- update exampes/test*.3dd data files with new input data format
- update user-manual.html
- issue release 20100105

*Sun Jan 3 2010 Henri Gavin <henri.gavin@duke.edu> 0.20091203
- add matlab path instructions to the user manual

*Fri Jan 1 2010 Henri Gavin <henri.gavin@duke.edu> 0.20091203
- update Matlab inteface program frame_3dd.m to work with recent enhancements
to Frame3DD (density in frame element data and gravitational loading)

*Mon Dec 21 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091203
- replace link to LinuxTerminal.pdf link from user-manual.html with a link to
http://www.ee.surrey.ac.uk/Teaching/Unix/unix1.html

*Wed Dec 16 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091203
- Add a newline character "\n" to the beginning of warning and error messages  
- Small edits to user-manual.html
- Rename dist-zip.sh to zipdist.sh

*Tue Dec 15 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091203
- Add doc/img/Sketchup-Frame1.jpg and doc/img/Sketchup-Trailer1.jpg
- Add doc/img/exp_ansys_gavin.png

*Tue Dec 8 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091203
- Remove TextWrangler suggestion from user manual